# libiso

./: .gitignore  Cargo.toml  Readme  Readme.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
libiso/: __init__.py  autounattend.xml  gui.py  libiso.py  sprout_0-0-28_aarch64.efi  sprout_0-0-28_x86_64.efi  sulfur.py
src/: _kmod.rs  bootloader.rs  dbx.rs  drives.rs  esd.rs  events.rs  exfat.rs  ext4.rs  extraction.rs  fat32.rs  gpt.rs  grub_patcher.rs  image_parser.rs  initramfs_patcher.rs  io.rs  iso9660.rs  kmod.rs  lib.rs  lzms.rs  lzms_arrays.rs  removable_drives.rs  sbsign.rs  signature.rs  squashfs.rs  test_utils.rs  udf.rs  verify.rs  win11_byapss.rs  writer.rs
tests/: test_esd_parser.py  test_fake_capacity_checker.py  test_initramfs_patcher.py  test_inspect_image.py  test_removable_drives.py  test_signature_verification.py  test_writer.py
