[package]
name = "libiso"
version = "0.0.8"
edition = "2024"
# rust-version = "1.95"   # The stabilized MaybeUninit<[T; N]> can allow skipping zero-filling

[lib]
name = "_libiso"
crate-type = ["cdylib"]


[dependencies]
sysinfo = "0.38.1"

hadris-iso = "1.1.2"
hadris-fat = {version = "1.1.2", features = ["exfat"]} 
hadris-part = { version = "1.1.2", features = ["crc"] }
arcbox-ext4 = "0.1.1"   # https://github.com/arcboxlabs/ext4-rs
fatfs = { features = ["lfn", "std", "alloc"], git = "https://github.com/rafalh/rust-fatfs.git"}

kanal = "0.1.1"
temp-file = "=0.1.4"
log = "0.4.1"

pelite = "0.10.0"
cms = "0.2.3"
der = { version = "0.7", features = ["alloc", "derive"] } 

sha1 = "0.11"
sha2 = "0.11"

edera-sprout-parsing = {git = "https://github.com/edera-dev/sprout.git", version = "0.0.28" } 


pyo3 = { version = "0.28.3", features = ["extension-module"] }


[target.'cfg(target_os = "linux")'.dependencies]
drives = "0.6.1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort" 
strip = true 

[profile.release-local]   # maturin develop --profile release-local  
inherits = "release"
opt-level = 1 
lto = "off"   
codegen-units = 16 
strip = false
debug = true 
