[package]
name = "libiso"
version = "0.0.8"
edition = "2024"
# rust-version = "1.95"   # The stabilized MaybeUninit<[T; N]> can allow skipping zero-filling

[lib]
name = "_libiso"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }

bytemuck = "1.25"
rand = "0.10.1"    # For UUIDs and rsa for sbsign

hadris-iso = "1.1.2"

# See if these need removing
temp-file = "=0.1.4"
log = "0.4.29"

# Examining Windows installer signatures
pelite = "0.10.0"
cms = { version = "0.3.0-pre.2" }
der = { version = "0.8", features = ["alloc", "derive"] } 
sha1 = "0.11"  
sha2 = "0.11"

# sbsign specific
spki = "0.8.0"
x509-cert = { version = " 0.3.0-rc.4", features = ["pem", "builder"] }
signature = "3.0.0-rc.10"
rsa = { version = "0.10.0-rc.17", features = ["sha2"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# panic = "abort" 
strip = true 

[profile.release-local]   # maturin develop --profile release-local  
inherits = "release"
opt-level = 1 
lto = "off"   
codegen-units = 16 
strip = false
debug = true 
