[build-system]
requires = ["maturin>=1.13"]
build-backend = "maturin"

[project]
name = "libiso"
dynamic = ["version"]
description = "Cross-platform USB image burning library"
readme = "Readme.md"
requires-python = ">=3.13"


[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py313"]
module-name = "libiso._libiso"
